# mvc

MvcMovie/: MvcMovie.sln
MvcMovie/Migrations/: 20250613175248_InitialCreate.Designer.cs  20250613181949_Rating.Designer.cs
MvcMovie/Properties/: launchSettings.json
MvcMovie/Views/Movies/: Index.cshtml
djangotutorial/: db.sqlite3
djangotutorial/django-polls/: LICENSE  MANIFEST.in  pyproject.toml  setup.py
djangotutorial/django-polls/django_polls/: models.py  runtests.py  tests.py  views.py
djangotutorial/django-polls/django_polls.egg-info/: PKG-INFO  SOURCES.txt
djangotutorial/django-polls/django_polls/migrations/: 0001_initial.py
djangotutorial/mysite/: settings.py  urls.py
djangotutorial/templates/admin/: base_site.html
